# quartz

./: .coverage  .gitignore  CLAUDE.md  CONTEXT.md  README.md  active_tournament.yaml  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml  codeql.yml
config/: config.py
docs/: Draft-Simulation.md  IMPL_F1_ELIGIBILITY.md  TESTING.md  TODO.md  flags.md  handoff_pool_composition_frozen_stats.md
docs/adr/: 0001-tournament-round-composite-key.md  0002-remove-pv-sentinel.md  0003-scraper-system-architecture.md  0003-xdg-tournament-registry.md  0004-f5-pool-median-redesign.md
docs/features/: CHAMP_FEATURES.md  F1_historical_peak.md  F2_confidence_rank.md  F3_inhouse_wilson.md  F4_manual_adjustments.md
quartz/: __init__.py  account_flags.py  constants.py  draft_simulator.py  local_csv_input.py  paths.py  pipeline_runner.py  player_registry.py  pv_compute.py  pv_weights_io.py  signup_sheet_adapter.py  tournament_config.py  tournament_registry.py
quartz/cli/: draft.py  export.py  filters.py  flags.py  ingest.py  main.py  manage.py  pv.py  pv_shadow.py  reset.py  scrape.py  stats.py  tournament.py  util.py  view.py
quartz/models/: champion_data.py  draft_model.py  player_profile.py  pv_model.py  rank_data.py
quartz/scrapers/: dpm_scraper.py  opgg_scraper.py  riot_api.py
quartz/tasks/: __init__.py  aggregate_rank_stats.py  dpm_scrape_champ.py  export.py  export_stats.py  local_csv_ingest.py  opgg_scrape.py  opgg_scrape_champ.py  opgg_scrape_rank.py  pv_compute.py  riot_enrich_puuid.py
quartz/utils/: champion_names.py  color_utils.py  logging.py  sheets_writer.py
scripts/: cli_shared_filters.py  compute_pv.py  convert_draft_list_csv.py  draft_sim.py  export_csv.py  ingest_csv.py  manage_player.py  opgg_batch_update.py  opgg_update.py  pool_stats.py  resync_profiles.py  set_player_type.py  util_opgg_dump.py  view_player.py
tests/: conftest.py  test_compute_enrichment.py  test_convert_draft_list_csv.py  test_paths.py  test_player_profile.py  test_pv_compute.py  test_rank_score.py  test_tournament_config.py  test_tournament_registry.py
tests/diag/: diag_dpm.py  diag_dpm_main_page.py  diag_dpm_queue_lane.py  (+9 more)
tournaments/: gcs_s4.yaml  test_v4.yaml
(+98 files in other folders)
