[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quartz"
version = "0.1.0"
description = "Tournament scouting and draft analysis for amateur LoL tournaments"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "selenium",
    "filelock",
    "PyYAML",
    "rich",
    "typer",
    "requests",
    "python-dotenv",
    "undetected-chromedriver>=3.5.5",
]

[project.scripts]
quartz = "quartz.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["quartz*"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
markers = [
    "unit: pure logic, no external dependencies",
    "integration: requires browser (Selenium) and HTML fixtures, no live network",
    "diag: live diagnostic, requires real network — never run in CI",
]

[tool.coverage.run]
source = ["quartz"]
relative_files = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
